5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1716_2506.log
== SUBMITION (2019-05-14 17:40:47) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
-- EXECUTION TIME:
0.147164
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:18) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.183068
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:21) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.148078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:21) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.205264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:22) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.278275
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:22) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.280368
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:22) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.269462
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:23) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.360691
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:23) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.509551
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:23) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.584319
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:23) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.657582
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2506/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:23) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.581052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:23) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<p<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.49022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 5, in <module>
    while(0<p<12000):
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:55) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.146178
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
1039
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINSAO
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:56) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.144981
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
1039
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINSAO
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:56) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.140598
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
1039
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINSAO
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:57) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.206078
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
1039
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINSAO
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:57) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.238557
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINSAO
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINSAO
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:57) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.193984
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINSAO
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINSAO
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:58) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.253142
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2506/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:58) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.43431
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINSAO
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINSAO
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:59) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.234848
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
3
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
1039
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:59) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.4648
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINSAO
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:59) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.446002
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:59) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	a = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.444255
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
1039
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINSAO
3
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:42:12) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	cresc = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.195973
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
22
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINSAO
23
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:42:13) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	cresc = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.158118
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
p:p:p:LIMITE
22
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
p:p:p:EXTINSAO
23
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
p:p:p:LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:42:14) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	cresc = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.217142
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
22
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
22
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINSAO
23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:42:14) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	cresc = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.296242
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
22
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINSAO
23
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:42:14) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	cresc = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.220131
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
2
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:47:58) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
1.67998
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
p:p:p:EXTINCAO
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:47:59) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:05) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
1.48465
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
p:p:p:EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:09) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
2.76192
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
p:p:p:EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:10) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
5.84866
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:10) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
4.13459
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
p:p:p:EXTINCAO
6
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:10) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
3.60214
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
36
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
6
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:36) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
   if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- ERROR:
File "XXXX", line 10
    if(peixes<=0):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:41) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
   if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.859584
-- ERROR:
  File "/home/codebench/codes/1716/2506/main.py", line 10
    if(peixes<=0):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:45) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
   if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
2.10031
-- ERROR:
  File "/home/codebench/codes/1716/2506/main.py", line 10
    if(peixes<=0):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:45) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
   if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
3.38149
-- ERROR:
  File "/home/codebench/codes/1716/2506/main.py", line 10
    if(peixes<=0):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:53) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:59) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
1.26676
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:34) 
-- CODE:
peixes = int(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:44) 
-- CODE:
peixes = int(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
2.49427
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:45) 
-- CODE:
peixes = int(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
2.09719
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:45) 
-- CODE:
peixes = int(input("p:"))
cresc = float(input("p:"))
ret = int(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:53) 
-- CODE:
peixes = int(input("p:"))
cresc = float(input("p:"))
ret = int(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
2.00162
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:55) 
-- CODE:
peixes = int(input("p:"))
cresc = float(input("p:"))
ret = int(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
2.78849
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:51:36) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:51:42) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
2.44161
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:51:48) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:52:00) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
3.06992
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:52:01) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
4.06677
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:52:02) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
4.57847
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:52:03) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
4.4385
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
36
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
6
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:52:05) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
5.46161
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
36
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
6
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:52:09) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
4.48466
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2506/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:52:09) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes += acresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
3.64627
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2506/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:52:36) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes =peixes + acresc
	peixes = peixes +ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
1.20201
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
76
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
321
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:52:44) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes =peixes + acresc
	peixes = peixes - ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
2.57466
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:52:47) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * ret / 100
	peixes =peixes + acresc
	peixes = peixes - ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:53:10) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * (ret / 100)
	peixes =peixes + acresc
	peixes = peixes - ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:53:19) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * (cresc / 100)
	peixes =peixes + acresc
	peixes = peixes - ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:53:20) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = cresc * (ret / 100)
	peixes =peixes + acresc
	peixes = peixes - ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
2.24397
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
10
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
EXTINCAO
36
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
p:p:p:EXTINCAO
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:53:39) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = peixes * (cresc / 100)
	peixes =peixes + acresc
	peixes = peixes - ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:53:49) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = peixes * (cresc / 100)
	peixes =peixes + acresc
	peixes = peixes - ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
1.78614
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:53:49) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = peixes * (cresc / 100)
	peixes =peixes + acresc
	peixes = peixes - ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:09:28) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	peixes = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.908811
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
1
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:09:28) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	peixes = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.226868
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
1
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:09:29) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	peixes = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.495618
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINSAO
1
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:09:29) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	peixes = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
1618.61
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:

-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:09:29) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	peixes = cresc * ret / 100
	peixes += cresc
	peixes -= ret
	anos += 1
if(peixes<=0):
	print("EXTINSAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
1618.55
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:

-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:25:29) 
-- CODE:
peixes = float(input("p:"))
cresc = float(input("p:"))
ret = float(input("p:"))
anos=0
while(0<peixes<12000):
	acresc = peixes * (cresc / 100)
	peixes =peixes + acresc
	peixes = peixes - ret
	anos += 1
if(peixes<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.226049
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
